Final changes of IR rework (#493)
Co-authored-by: Thomas Haas <tomy.haas@t-online.de>
Co-authored-by: Hernan Ponce de Leon <hernanl.leon@huawei.com>